GUI/Page-generated-sample1.output
  File "C:/Users/lama2/PycharmProjects/GUI/Page-generated-sample1.py", line 20
    import Page-generated-sample1_support
               ^
SyntaxError: invalid syntax
